# sports-analytics-pipeline

./: .copilot-instructions.md  .env  .gitignore  README.md  main.py  pyproject.toml  scraper.py  test.duckdb
bball_season/: __init__.py  pipeline.py  scraper.py  storage.py  transform.py
data/: .backfill_timing.json
docs/: .dlt-motherduck-guide.html  data-model-old.md  data-model.md  espn-api-reference.md  testing.md
sports_analytics_pipeline/: __init__.py  config.py  ingest.py  pipeline.py  schema.py  scraper.py  storage.py  transform.py
tests/: conftest.py  test_cli.py  test_dlt_error_handling.py  test_environment_config.py  test_error_handling.py  test_ingest.py  test_ingest_dlt.py  test_ingest_ext.py  test_ingest_integration.py  test_ingest_simple.py  test_ingest_transformations.py  test_integration_live.py  test_live_integration.py  test_motherduck_integration.py  test_motherduck_live.py  test_pipeline.py  test_pipeline_backfill.py  test_scraper.py  test_scraper_ext.py  test_storage.py  test_transform.py
