[project]
name = "sports-analytics-pipeline"
version = "0.1.0"
description = "NBA data ingestion and analytics pipeline using dlt and DuckDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.17.1",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.4.2",
    "jupyterlab>=4.4.9",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true

